--- a/_vti_cnf/outchain-player.css
+++ b/_vti_cnf/outchain-player.css
@@ -1,11 +1,12 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|jsa9\\Administrator
 vti_modifiedby:SR|jsa9\\Administrator
-vti_timelastmodified:TR|21 Oct 2019 13:10:06 -0000
+vti_timelastmodified:TR|22 Oct 2019 11:33:37 -0000
 vti_timecreated:TR|21 Oct 2019 13:10:06 -0000
-vti_cacheddtm:TX|21 Oct 2019 13:10:06 -0000
-vti_filesize:IR|5081
-vti_cachedlinkinfo:VX|S|../img/outchain/audio_sprite.png S|../img/outchain/loading.gif
-vti_cachedsvcrellinks:VX|NSUS|file:///D:/img/outchain/audio_sprite.png NSUS|file:///D:/img/outchain/loading.gif
 vti_extenderversion:SR|6.0.2.5516
 vti_backlinkinfo:VX|player.htm player2.htm
+vti_nexttolasttimemodified:TW|22 Oct 2019 03:35:14 -0000
+vti_cacheddtm:TX|22 Oct 2019 03:35:14 -0000
+vti_filesize:IR|5180
+vti_cachedlinkinfo:VX|S|../img/outchain/audio_sprite.png S|../img/outchain/loading.gif
+vti_cachedsvcrellinks:VX|NSUS|file:///D:/img/outchain/audio_sprite.png NSUS|file:///D:/img/outchain/loading.gif
